src/test/deca/syntax/valid/created/affect_NULL/FLOAT.deca
// Description:
//		Affecter null a un float
// Resultats:
//		OK

{
	float x = null;
}
