src/test/deca/syntax/invalid/created/matherror/affectation3.deca
// Description :
// double virgule.
//
// Resultats :
//    ## TEST LEX : OK
//## TEST SYN
// Exception in thread "main" java.lang.AssertionError



{
    float x = 1..2;
}
